--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             05 62 22 88 08
           </div>
           <div class="lang_header">
-            <img src="/../laRecreation/images/frenchFlag.png" alt="french flag" />
-            <img src="/../laRecreation/images/englishFlag.png" alt="english flag" />
+            <img src="images/frenchFlag.png" alt="french flag" />
+            <img src="images/englishFlag.png" alt="english flag" />
           </div>
         </div>
       </div>
@@ -35,7 +35,7 @@
 
           <nav>
             <ul class="menu">
-              <li><a href="/../laRecreation/pages/french/menuAndWine.php">Menus et carte des vins</a></li>
+              <li><a href="pages/french/menuAndWine.html">Menus et carte des vins</a></li>
               <li><a href="/../laRecreation/pages/french/kitchenAndTakeAway.php">Cours de cuisine et traiteur</a></li>
               <li><a href="/../laRecreation/pages/french/environment.php">Environnement</a></li>
               <li><a href="/../laRecreation/pages/french/contactAndPartner.php">Contact et partenaires</a></li>
