--- a/pages/french/legalMentions.html
+++ b/pages/french/legalMentions.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>La Récréation</title>
-  <link rel="stylesheet" href="/../laRecreation/styles/foundation.min.css" />
-  <link rel="stylesheet" href="/../laRecreation/styles/style.css" />
+  <link rel="stylesheet" href="styles/foundation.min.css" />
+  <link rel="stylesheet" href="styles/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
-  <link rel="stylesheet" href="/../laRecreation/styles/slick.css" />
-  <link rel="stylesheet" href="/../laRecreation/styles/slick-theme.css" />
+  <link rel="stylesheet" href="styles/slick.css" />
+  <link rel="stylesheet" href="styles/slick-theme.css" />
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="/../laRecreation/index.php">La Récréation</a></h1>
+          <h1><a href="index.html">La Récréation</a></h1>
 
           <div class="tel_header">
             05 62 22 88 08
@@ -35,10 +35,10 @@
 
           <nav>
             <ul class="menu">
-              <li><a href="/../laRecreation/pages/french/menuAndWine.php">Menus et carte des vins</a></li>
-              <li><a href="/../laRecreation/pages/french/kitchenAndTakeAway.php">Cours de cuisine et traiteur</a></li>
-              <li><a href="/../laRecreation/pages/french/environment.php">Environnement</a></li>
-              <li><a href="/../laRecreation/pages/french/contactAndPartner.php">Contact et partenaires</a></li>
+              <li><a href="pages/french/menuAndWine.html">Menus et carte des vins</a></li>
+              <li><a href="pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
+              <li><a href="pages/french/environment.html">Environnement</a></li>
+              <li><a href="pages/french/contactAndPartner.html">Contact et partenaires</a></li>
             </ul>
           </nav>
         </div>
@@ -113,11 +113,11 @@
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="#" title="Page Mentions légales"><img src="/../laRecreation/images/tripavidsorIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="/../laRecreation/images/fourchetteIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="/../laRecreation/images/michelinIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="/../laRecreation/images/bonneTableIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="/../laRecreation/images/facebookIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="images/tripavidsorIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="images/fourchetteIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="images/michelinIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="images/bonneTableIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="images/facebookIcon.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
@@ -128,7 +128,7 @@
         </div>
         <div class="columns large-4 medium-4 small-4">
           <div class="rightFooter">
-            <a href="/../laRecreation/pages/french/legalMentions.php" title="Page Mentions légales">MENTIONS LEGALES</a>
+            <a href="pages/french/legalMentions.html" title="Page Mentions légales">MENTIONS LEGALES</a>
           </div>
         </div>
       </div>
