ON TESTE DES TRUCS DE FOLIE

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
           <nav>
             <ul class="menu">
               <li><a href="pages/french/menuAndWine.html">Menus et carte des vins</a></li>
-              <li><a href="/../laRecreation/pages/french/kitchenAndTakeAway.php">Cours de cuisine et traiteur</a></li>
-              <li><a href="/../laRecreation/pages/french/environment.php">Environnement</a></li>
-              <li><a href="/../laRecreation/pages/french/contactAndPartner.php">Contact et partenaires</a></li>
+              <li><a href="pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
+              <li><a href="pages/french/environment.html">Environnement</a></li>
+              <li><a href="pages/french/contactAndPartner.html">Contact et partenaires</a></li>
             </ul>
           </nav>
         </div>
@@ -59,10 +59,10 @@
       <div class="columns large-7 medium-7 small-12">
         <div class="slider">
           <figure>
-            <img src="/../laRecreation/images/crevetteSesame.jpg" alt="Crevette sésame">
-            <img src="/../laRecreation/images/douceurMangue.jpg" alt="Douceur de mangue">
-            <img src="/../laRecreation/images/biscuitChoco.jpg" alt="Plat">
-            <img src="/../laRecreation/images/biscuitChoco.jpg" alt="Biscuit au chocolat">
+            <img src="images/crevetteSesame.jpg" alt="Crevette sésame">
+            <img src="images/douceurMangue.jpg" alt="Douceur de mangue">
+            <img src="images/biscuitChoco.jpg" alt="Plat">
+            <img src="images/biscuitChoco.jpg" alt="Biscuit au chocolat">
           </figure>
         </div>
       </div>
@@ -70,7 +70,7 @@
     <div class="row">
       <div class="columns large-7 medium-7 small-12">
         <div class="videoHome">
-          <img src="/../laRecreation/images/biscuitChoco.jpg" />
+          <img src="images/biscuitChoco.jpg" />
         </div>
       </div>
 
@@ -111,11 +111,11 @@
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="#" title="Page Mentions légales"><img src="/../laRecreation/images/tripavidsorIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="/../laRecreation/images/fourchetteIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="/../laRecreation/images/michelinIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="/../laRecreation/images/bonneTableIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="/../laRecreation/images/facebookIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="images/tripavidsorIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="images/fourchetteIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="images/michelinIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="images/bonneTableIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="images/facebookIcon.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
@@ -126,7 +126,7 @@
         </div>
         <div class="columns large-4 medium-4 small-4">
           <div class="rightFooter">
-            <a href="/../laRecreation/pages/french/legalMentions.php" title="Page Mentions légales">MENTIONS LEGALES</a>
+            <a href="pages/french/legalMentions.php" title="Page Mentions légales">MENTIONS LEGALES</a>
           </div>
         </div>
       </div>
