--- a/pages/french/kitchenAndTakeaway.html
+++ b/pages/french/kitchenAndTakeaway.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>La Récréation</title>
-  <link rel="stylesheet" href="/../laRecreation/styles/foundation.min.css" />
-  <link rel="stylesheet" href="/../laRecreation/styles/style.css" />
+  <link rel="stylesheet" href="../../styles/foundation.min.css" />
+  <link rel="stylesheet" href="../../styles/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
-  <link rel="stylesheet" href="/../laRecreation/styles/slick.css" />
-  <link rel="stylesheet" href="/../laRecreation/styles/slick-theme.css" />
+  <link rel="stylesheet" href="../../styles/slick.css" />
+  <link rel="stylesheet" href="../../styles/slick-theme.css" />
 </head>
 
 <body>
@@ -17,14 +17,14 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="/../laRecreation/index.php">La Récréation</a></h1>
+          <h1><a href="../../index.html">La Récréation</a></h1>
 
           <div class="tel_header">
             05 62 22 88 08
           </div>
           <div class="lang_header">
-            <img src="/../laRecreation/images/frenchFlag.png" alt="french flag" />
-            <img src="/../laRecreation/images/englishFlag.png" alt="english flag" />
+            <img src="../../images/frenchFlag.png" alt="french flag" />
+            <img src="../../images/englishFlag.png" alt="english flag" />
           </div>
         </div>
       </div>
@@ -35,10 +35,10 @@
 
           <nav>
             <ul class="menu">
-              <li><a href="/../laRecreation/pages/french/menuAndWine.php">Menus et carte des vins</a></li>
-              <li><a href="/../laRecreation/pages/french/kitchenAndTakeAway.php">Cours de cuisine et traiteur</a></li>
-              <li><a href="/../laRecreation/pages/french/environment.php">Environnement</a></li>
-              <li><a href="/../laRecreation/pages/french/contactAndPartner.php">Contact et partenaires</a></li>
+              <li><a href="../../pages/french/menuAndWine.php">Menus et carte des vins</a></li>
+              <li><a href="../../pages/french/kitchenAndTakeAway.php">Cours de cuisine et traiteur</a></li>
+              <li><a href="../../pages/french/environment.php">Environnement</a></li>
+              <li><a href="../../pages/french/contactAndPartner.php">Contact et partenaires</a></li>
             </ul>
           </nav>
         </div>
@@ -52,7 +52,7 @@
       <div class="row">
         <div class="columns large-7 medium-7 small-12">
           <div class="firstPictureKitchen">
-            <img src="/../laRecreation/images/coursdecuisine.jpg" alt="Cours de cuisine" />
+            <img src="../../images/coursdecuisine.jpg" alt="Cours de cuisine" />
           </div>
         </div>
         <div class="columns large-5 medium-5 small-12">
@@ -78,8 +78,8 @@
 
         <div class="columns large-7 medium-7 small-12">
           <div class="secondPictureKitchen">
-            <img src="/../laRecreation/images/traiteur1.png" alt="Photo plat traiteur 1" class="spkImg1" />
-            <img src="/../laRecreation/images/traiteur2.png" alt="Photo plat traiteur 2" class="spkImg2" />
+            <img src="../../images/traiteur1.png" alt="Photo plat traiteur 1" class="spkImg1" />
+            <img src="../../images/traiteur2.png" alt="Photo plat traiteur 2" class="spkImg2" />
           </div>
         </div>
       </div>
@@ -94,11 +94,11 @@
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="#" title="Page Mentions légales"><img src="/../laRecreation/images/tripavidsorIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="/../laRecreation/images/fourchetteIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="/../laRecreation/images/michelinIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="/../laRecreation/images/bonneTableIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="/../laRecreation/images/facebookIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="../../images/tripavidsorIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="../../images/fourchetteIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="../../images/michelinIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="../../images/bonneTableIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="../../images/facebookIcon.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
@@ -109,7 +109,7 @@
         </div>
         <div class="columns large-4 medium-4 small-4">
           <div class="rightFooter">
-            <a href="/../laRecreation/pages/french/legalMentions.php" title="Page Mentions légales">MENTIONS LEGALES</a>
+            <a href="../../pages/french/legalMentions.php" title="Page Mentions légales">MENTIONS LEGALES</a>
           </div>
         </div>
       </div>
