--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
           <nav>
             <ul class="menu">
+              <li><a href="index.html">Accueil du site</a></li>
               <li><a href="pages/french/menuAndWine.html">Menus et carte des vins</a></li>
               <li><a href="pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
               <li><a href="pages/french/environment.html">Environnement</a></li>
