--- a/pages/french/kitchenAndTakeaway.html
+++ b/pages/french/kitchenAndTakeaway.html
@@ -35,10 +35,10 @@
 
           <nav>
             <ul class="menu">
-              <li><a href="../../pages/french/menuAndWine.php">Menus et carte des vins</a></li>
-              <li><a href="../../pages/french/kitchenAndTakeAway.php">Cours de cuisine et traiteur</a></li>
-              <li><a href="../../pages/french/environment.php">Environnement</a></li>
-              <li><a href="../../pages/french/contactAndPartner.php">Contact et partenaires</a></li>
+              <li><a href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
+              <li><a href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
+              <li><a href="../../pages/french/environment.html">Environnement</a></li>
+              <li><a href="../../pages/french/contactAndPartner.html">Contact et partenaires</a></li>
             </ul>
           </nav>
         </div>
@@ -109,7 +109,7 @@
         </div>
         <div class="columns large-4 medium-4 small-4">
           <div class="rightFooter">
-            <a href="../../pages/french/legalMentions.php" title="Page Mentions légales">MENTIONS LEGALES</a>
+            <a href="../../pages/french/legalMentions.html" title="Page Mentions légales">MENTIONS LEGALES</a>
           </div>
         </div>
       </div>
