--- a/pages/french/menuAndWine.html
+++ b/pages/french/menuAndWine.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <title>La Récréation</title>
-  <link rel="stylesheet" href="styles/foundation.min.css" />
-  <link rel="stylesheet" href="styles/style.css" />
+  <link rel="stylesheet" href="../../styles/foundation.min.css" />
+  <link rel="stylesheet" href="../../styles/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
 </head>
 
@@ -15,14 +15,14 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="index.html">La Récréation</a></h1>
+          <h1><a href="../../index.html">La Récréation</a></h1>
 
           <div class="tel_header">
             05 62 22 88 08
           </div>
           <div class="lang_header">
-            <img src="images/frenchFlag.png" alt="french flag" />
-            <img src="images/englishFlag.png" alt="english flag" />
+            <img src="../../images/frenchFlag.png" alt="french flag" />
+            <img src="../../images/englishFlag.png" alt="english flag" />
           </div>
         </div>
       </div>
@@ -33,10 +33,10 @@
 
           <nav>
             <ul class="menu">
-              <li><a href="pages/french/menuAndWine.html">Menus et carte des vins</a></li>
-              <li><a href="pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
-              <li><a href="pages/french/environment.html">Environnement</a></li>
-              <li><a href="pages/french/contactAndPartner.html">Contact et partenaires</a></li>
+              <li><a href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
+              <li><a href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
+              <li><a href="../../pages/french/environment.html">Environnement</a></li>
+              <li><a href="../../pages/french/contactAndPartner.html">Contact et partenaires</a></li>
             </ul>
           </nav>
         </div>
@@ -48,10 +48,10 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="menusAndWine">
-          <img src="images/menu1.jpg" alt="menu du Petit Ecolier">
-          <img src="images/menu2.jpg" alt="Menu du Maître d'école">
-          <img src="images/menu3.jpg" alt="Menu la Récréation">
-          <img src="images/vine.jpg" alt="Carte des vins">
+          <img src="../../images/menu1.jpg" alt="menu du Petit Ecolier">
+          <img src="../../images/menu2.jpg" alt="Menu du Maître d'école">
+          <img src="../../images/menu3.jpg" alt="Menu la Récréation">
+          <img src="../../images/vine.jpg" alt="Carte des vins">
         </div>
       </div>
     </div>
@@ -64,11 +64,11 @@
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="#" title="Page Mentions légales"><img src="images/tripavidsorIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="images/fourchetteIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="images/michelinIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="images/bonneTableIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="images/facebookIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="../../images/tripavidsorIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="../../images/fourchetteIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="../../images/michelinIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="../../images/bonneTableIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="../../images/facebookIcon.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
@@ -79,7 +79,7 @@
         </div>
         <div class="columns large-4 medium-4 small-4">
           <div class="rightFooter">
-            <a href="pages/french/legalMentions.html" title="Page Mentions légales">MENTIONS LEGALES</a>
+            <a href="../../pages/french/legalMentions.html" title="Page Mentions légales">MENTIONS LEGALES</a>
           </div>
         </div>
       </div>
