--- a/pages/french/menuAndWine.html
+++ b/pages/french/menuAndWine.html
@@ -33,10 +33,11 @@
 
           <nav>
             <ul class="menu">
-              <li><a href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
-              <li><a href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
-              <li><a href="../../pages/french/environment.html">Environnement</a></li>
-              <li><a href="../../pages/french/contactAndPartner.html">Contact et partenaires</a></li>
+              <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/environment.html">Environnement</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/contactAndPartner.html">Contact et partenaires</a></li>
             </ul>
           </nav>
         </div>
@@ -79,7 +80,7 @@
         </div>
         <div class="columns large-4 medium-4 small-4">
           <div class="rightFooter">
-            <a href="../../pages/french/legalMentions.html" title="Page Mentions légales">MENTIONS LEGALES</a>
+            <a class="lineUnderLink" href="../../pages/french/legalMentions.html" title="Page Mentions légales">MENTIONS LEGALES</a>
           </div>
         </div>
       </div>
