--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="styles/slick.css" />
 </head>
 
-<body>
+<body class="bodyIndex">
 
   <header id="header">
     <div class="row">
@@ -110,11 +110,11 @@
       <div class="footerCss">
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
-              <a href="#" title="Page Mentions légales"><img src="images/tripavidsorIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="images/fourchetteIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="images/michelinIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="images/bonneTableIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="images/facebookIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales" class="imgfootera"><img src="images/tripavidsorIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"class="imgfootera"><img src="images/fourchetteIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"class="imgfootera"><img src="images/michelinIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"class="imgfootera"><img src="images/bonneTableIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"class="imgfootera"><img src="images/facebookIcon.jpg" alt="logo site"></a>
           </div>
         </div>
         <div class="columns large-4 medium-4 small-4">
