--- a/pages/french/environment.html
+++ b/pages/french/environment.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
 </head>
 
-<body>
+<body class="bodyEnvironment">
 
   <header id="header">
     <div class="row">
