Auto stash before merge of "master" and "origin/master"

--- a/pages/french/contactAndPartner.html
+++ b/pages/french/contactAndPartner.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../../styles/slick-theme.css" />
 </head>
 
-<body>
+<body class="bodyContact">
 
   <header id="header">
     <div class="row">
