Croisons les doigts

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
           <h1><a href="index.html">La Récréation</a></h1>
 
           <div class="tel_header">
-            05 62 22 88 08
+           <img src="images/phone.png" alt="logo téléphone"/>
+            <p>05 62 22 88 08</p>
           </div>
           <div class="lang_header">
             <img src="images/frenchFlag.png" alt="french flag" />
@@ -49,15 +50,15 @@
 
   <section id="home">
     <div class="row">
-      <div class="columns large-5 medium-5 small-12">
+      <div class="columns large-6 medium-6 small-12">
         <div class="firstTextHome">
-          <h2>La Récréation</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores pariatur consequuntur consectetur repellat vero explicabo alias expedita accusantium neque ea autem impedit ad necessitatibus, enim illum saepe voluptatibus animi temporibus! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente quos officia odio explicabo impedit cumque, debitis nisi fugit in magnam, consequatur, deserunt quam commodi. Porro possimus qui, cum eos dolorum?</p>
+          <h2>L’heure de <font color="#CC76CA">La Récréation</font> a sonné !<br/><br/></h2>
+          <p>Un restaurant dépaysant, complétement atypique dans une ancienne école de l’entre-deux guerres. Salle de classes, cour de récréation avec préau transformé en jardin luxuriant, où l’on déjeune sous le marronnier ou les platanes mûriers.<br/><br/>Le soir venu l’éclairage met en relief les anciens murs de pierres de cette place idillyque et chargé d’histoire où les artistes viennent exposer. Une cuisine inventive dans l’esprit du site, riche de saveurs et de surprises venue des 4 coins du monde garantissant des légumes frais issu du potager qui jouxte le restaurant. Le restaurant organise régulièrement des cours de cuisine et développe un service de traiteur à domicile.<br/><br/><br/>Plus qu’un bon restaurant, c’est un voyage.</p>
         </div>
       </div>
 
 
-      <div class="columns large-7 medium-7 small-12">
+      <div class="columns large-6 medium-6 small-12">
         <div class="slider">
           <figure>
             <img src="images/crevetteSesame.jpg" alt="Crevette sésame">
@@ -71,14 +72,16 @@
     <div class="row">
       <div class="columns large-7 medium-7 small-12">
         <div class="videoHome">
-          <img src="images/biscuitChoco.jpg" />
+          <video width="520" height="340" controls>
+          <source src="images/laRecreation.mp4" type="video/mp4" alt="Votre navigateur ne supporte pas la balise vidéo.">
+          </video>
         </div>
       </div>
 
       <div class="columns large-5 medium-5 small-12">
         <div class="secondTextHome">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. At vel perspiciatis laboriosam voluptates quia nesciunt officiis eligendi quos, ducimus illo, error dolore enim neque, quod assumenda impedit. Ipsam, ab, neque.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt nam vitae distinctio rerum maxime, eveniet enim quidem? Iste, officiis nobis repudiandae, ullam deserunt voluptatibus et aliquid ab, animi vel quod!
+            Le Restaurant se situe dans la commune des Arques, petit village situé au sud de la France dans le département du Lot région midi pyrénées. A 26 km de Cahors et 26 km de Gourdon.Au sud du périgord et au sud-est de la Dordogne Le village est classé pour l'église Saint Laurent les Fresques de Saint Andrée, l'ancien doyénée et sa tour.<br/>Les Arques sont également connus pour son musée consacré à Ossip Zadkine, les ateliers des Arques qui font venir chaque année une douzaine d'artistes venant de toute l'Europe, et bien sur le restaurant la Récréation. Que d'effervescence dans un si petit village de 217 Habitants.
           </p>
         </div>
       </div>
@@ -92,7 +95,7 @@
             <br/>46250 Les Arques</p>
           <p id="contactPhoneHome">Tél : 05 65 22 88 08</p>
           <h2>Horaires et jours d'ouverture</h2>
-          <p id="contactOpeningDaysHome">Du <i><font color="#CC76CA">lundi</font></i> au <i><font color="#CC76CA">dimanche</font></i> de 12h à 15h15 et de 19h30 à 21h15. Fermé le mercredi et le jeudi.</p>
+          <p>Du <font color="#CC76CA">lundi</font> au <font color="#CC76CA">dimanche</font> de 12h à 15h15 et de 19h30 à 21h15. Fermé le mercredi et le jeudi.</p>
         </div>
       </div>
 
