--- a/pages/french/environment.html
+++ b/pages/french/environment.html
@@ -18,7 +18,8 @@
           <h1><a href="../../index.html">La Récréation</a></h1>
 
           <div class="tel_header">
-            05 62 22 88 08
+           <img src="../../images/phone.png" alt="logo téléphone"/>
+            <p>05 62 22 88 08</p>
           </div>
           <div class="lang_header">
             <img src="../../images/frenchFlag.png" alt="french flag" />
@@ -50,7 +51,7 @@
       <div class="columns large-12 medium-12 small-12">
         <div class="firstTextEnvironment">
           <h2>NOTRE ENVIRONNEMENT</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel architecto repellendus cumque eaque nam ullam dignissimos explicabo harum blanditiis. Tenetur tempora veritatis, suscipit sunt ratione officiis est, placeat quas.</p>
+          <p>Le village de « LES ARQUES » n’est pas un village que l’ont traverse mais un village où l’on reste toute la journée.<br/><br/>Sur la crête se sont installés depuis le XI éme siècle un village autour d’un Prieuré et dans la vallée une série de moulins ou autres  édifices dédiés à des activités artisanales, voilà pour l’histoire.<br/><br/>De tout cela il reste tout un patrimoine architectural très divers, de  l’église romane aux moulins en passant par les pigeonniers, fours et  autres chapelles avec fresque. </p>
         </div>
       </div>
     </div>
@@ -59,14 +60,13 @@
       <div class="row">
         <div class="columns large-7 medium-7 small-12">
           <div class="firstPictureEnvironment">
-            <!-- PLACE YOUR PICTURE HERE -->
-            rgryejruyjyhgfb
+            <img src="../../images/mus%C3%A9e_Zadkine.jpg" alt="Le musée Zadkine"/>
           </div>
         </div>
-        <div class="columns large-5 medium-5 small-12">
+        <div class="columns large-5 medium-12 small-12">
           <div class="secondTextEnvironment">
-            <h2>LE MUSEE</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam deleniti quas eligendi expedita. Ipsa, voluptate corrupti illum aut perferendis doloribus commodi iste accusantium suscipit! Aut est dignissimos, quo sequi perferendis.</p>
+            <h2>LE MUSEE ZADKINE</h2>
+            <p>À l’abri des grandes voies de circulation automobile, même locales, le  village a attiré dans les années 30 un grand sculpteur, Zadkine dont depuis 26 ans un musée perpétue le souvenir.<br/>Le musée Zadkine a été conçu comme un centre de vie culturelle. Il propose les œuvres d’Ossip Zadkine qui s’y installa en 1934. C’est à Les Arques que sont présentées de prestigieuses œuvres et documents qui témoignent de la création de l’artiste : Grands bois, bronzes puissants. Gravures, photos. Cinq grandes sculptures animent le village. Des œuvres religieuses sont présentées dans l’église.<br/>L’ouverture du musée a entraîné la naissance d’une résidence d’art contemporain dont les réalisations animent le bourg et ses alentours tous les étés. </p>
           </div>
         </div>
       </div>
@@ -77,13 +77,12 @@
         <div class="columns large-7 medium-7 small-12">
           <div class="thirdTextEnvironment">
             <h2>LA VALLÉE DE LA MASSE ET LE MARAIS DES ARQUES</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis fugiat, natus facere repudiandae minima at ipsa perspiciatis provident ducimus nostrum dicta placeat! Fuga magni, veritatis deleniti error? In, amet, rem.</p>
+            <p>L’aménagement d’une zone dite “Espace Naturel Sensible” qui propose  une visite très documentée des zones humides du village et le balisage  de différents chemins de randonnée complètent la palette historique et  artistique du village où l’on peut passer une journée riche et diverse.<br/><br/>Depuis 1999, la vallée de la Masse et le marais des Arques ont été classés en Espace naturel sensible. Ce site est remarquable pour ses paysages et ses milieux naturels originaux (marais, roselière, bois et prairies humides, tourbière, forêt de feuillus,…); sa faune et sa  flore rares (Damier de la succise, Agrion de mercure, Râle d’eau, Triton marbré, Renoncule langue,…) avec son cortège d’espèces protégées; son patrimoine culturel et historique d’un grand intérêt (moulins de la Masse, activité sidérurgique médiévale, chapelle Saint-André, …).<br/><br/>Cet espace bénéficie d’un programme de gestion et de mise en valeur mené par le Conseil général du Lot, en partenariat avec les collectivités locales et différents acteurs (propriétaires, exploitants agricoles, chasseurs, randonneurs, …).<br/><br/>Pour découvrir cette zone humide, un circuit d’interprétation de 4,5 km a été construit en partie sur caillebotis. Ce circuit au départ du bourg des Arques, est équipé de bornes implantées tout au long du parcours. En y glissant les fiches du guide découverte, ces bornes se transforment en table d’orientation et permettent de comprendre les spécificités des espaces qui s’offrent à vous.</p>
           </div>
         </div>
         <div class="columns large-5 medium-5 small-12">
           <div class="secondPictureEnvironment">
-            <!-- PLACE YOUR PICTURE HERE -->
-            etstetvrvdeb
+            <img src="../../images/marais.jpg" alt="Le marais des Arques"/>
           </div>
         </div>
       </div>
