--- a/pages/french/kitchenAndTakeaway.html
+++ b/pages/french/kitchenAndTakeaway.html
@@ -20,7 +20,8 @@
           <h1><a href="../../index.html">La Récréation</a></h1>
 
           <div class="tel_header">
-            05 62 22 88 08
+           <img src="../../images/phone.png" alt="logo téléphone"/>
+            <p>05 62 22 88 08</p>
           </div>
           <div class="lang_header">
             <img src="../../images/frenchFlag.png" alt="french flag" />
