--- a/pages/french/kitchenAndTakeaway.html
+++ b/pages/french/kitchenAndTakeaway.html
@@ -20,7 +20,7 @@
           <h1><a href="../../index.html">La Récréation</a></h1>
 
           <div class="tel_header">
-           <img src="../../images/phone.png" alt="logo téléphone"/>
+            <img src="../../images/phone.png" alt="logo téléphone" />
             <p>05 62 22 88 08</p>
           </div>
           <div class="lang_header">
@@ -36,7 +36,7 @@
 
           <nav>
             <ul class="menu">
-               <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
+              <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
               <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
               <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
               <li><a class="lineUnderLink" href="../../pages/french/environment.html">Environnement</a></li>
@@ -68,7 +68,7 @@
 
     <div id="secondPartKitchen">
       <div class="row">
-        <div class="columns large-5 medium-5 small-12">
+        <div class="columns large-5 medium-12 small-12">
           <div class="secondTextKitchen">
             <h2>LE TRAITEUR</h2>
             <p>Créateur de nouveaux concepts, pour rendre uniques vos événements notre traiteur met à votre disposition son expérience et son savoir-faire en cuisine et vous fait découvrir des créations uniques qui surprendront et enchanteront vos invités.
@@ -78,10 +78,10 @@
           </div>
         </div>
 
-        <div class="columns large-7 medium-7 small-12">
+        <div class="columns large-7 medium-12 small-12">
           <div class="secondPictureKitchen">
-            <img src="../../images/traiteur1.png" alt="Photo plat traiteur 1" class="spkImg1" />
-            <img src="../../images/traiteur2.png" alt="Photo plat traiteur 2" class="spkImg2" />
+            <img src="../../images/meatKitchen.jpg" alt="Photo plat traiteur 1" class="spkImg1" />
+            <img src="../../images/fruitKitchen.jpg" alt="Photo plat traiteur 2" class="spkImg2" />
           </div>
         </div>
       </div>
