Auto stash before merge of "master" and "origin/master"

--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
       <div class="footerCss">
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
-              <a href="#" title="Page Mentions légales" class="imgfootera"><img src="images/tripavidsorIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"class="imgfootera"><img src="images/fourchetteIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"class="imgfootera"><img src="images/michelinIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"class="imgfootera"><img src="images/bonneTableIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"class="imgfootera"><img src="images/facebookIcon.jpg" alt="logo site"></a>
+              <img src="images/tripavidsorIcon.jpg" alt="logo site">
+              <img src="images/fourchetteIcon.jpg" alt="logo site">
+              <img src="images/michelinIcon.jpg" alt="logo site">
+              <img src="images/bonneTableIcon.jpg" alt="logo site">
+              <img src="images/facebookIcon.jpg" alt="logo site">
           </div>
         </div>
         <div class="columns large-4 medium-4 small-4">
@@ -127,7 +127,7 @@
         </div>
         <div class="columns large-4 medium-4 small-4">
           <div class="rightFooter">
-            <a class="lineUnderLink" href="pages/french/legalMentions.html" title="Page Mentions légales">MENTIONS LEGALES</a>
+            <a class="lineUnderLink" href="../../pages/french/legalMentions.html" title="Page Mentions légales">MENTIONS LEGALES</a>
           </div>
         </div>
       </div>
