--- a/pages/french/contactAndPartner.html
+++ b/pages/french/contactAndPartner.html
@@ -51,21 +51,20 @@
   <section>
     <div class="row">
       <div class="columns large-6 medium-6 small-12">
-        <div class="firstTextContact">
-          <h2>NOUS CONTACTER</h2>
-          <p>Le Bourg
-            <br/>46250 Les Arques
-            <br/>
-            <br/>Tél : 05 65 22 88 08
-          </p>
+        <div class="contactHome">
+          <h2>Nous contacter</h2>
+          <h4>La Récréation</h4>
+          <p id="contactAdressHome">Le Bourg
+            <br/>46250 Les Arques</p>
+          <p id="contactPhoneHome">Tél : 05 65 22 88 08</p>
           <h2>Horaires et jours d'ouverture</h2>
-          <p>Du lundi au vendredi</p>
-          <p>de 12h à 15h15 et de 19h30 à 21h15</p>
+          <p>Du <font color="#CC76CA">lundi</font> au <font color="#CC76CA">dimanche</font> de 12h à 15h15 et de 19h30 à 21h15. Fermé le mercredi et le jeudi.</p>
         </div>
       </div>
+
       <div class="columns large-6 medium-6 small-12">
-        <div class="googleContact">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d45453.6654176342!2d1.206686941075681!3d44.60000969949008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x44a6c3f858018649!2sRestaurant+La+R%C3%A9cr%C3%A9ation!5e0!3m2!1sfr!2sfr!4v1495806043851" width="450" height="400" frameborder="0" style="border:0" allowfullscreen title="carte google"></iframe>
+        <div class="mapHome">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2840.6870004125844!2d1.2477162150621108!3d44.60342689848439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ac9dcb381468d9%3A0x44a6c3f858018649!2sRestaurant+La+R%C3%A9cr%C3%A9ation!5e0!3m2!1sfr!2sfr!4v1495912774201" width="410.5" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
