Askip c'est (presque) responsive

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
       <div class="columns large-6 medium-6 small-12">
         <div class="mapHome">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2840.6870004125844!2d1.2477162150621108!3d44.60342689848439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ac9dcb381468d9%3A0x44a6c3f858018649!2sRestaurant+La+R%C3%A9cr%C3%A9ation!5e0!3m2!1sfr!2sfr!4v1495912774201" width="410.5" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe class="googleMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2840.6870004125844!2d1.2477162150621108!3d44.60342689848439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ac9dcb381468d9%3A0x44a6c3f858018649!2sRestaurant+La+R%C3%A9cr%C3%A9ation!5e0!3m2!1sfr!2sfr!4v1495912774201" width="410.5" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
