--- a/pages/french/contactAndPartner.html
+++ b/pages/french/contactAndPartner.html
@@ -20,7 +20,7 @@
           <h1><a href="../../index.html">La Récréation</a></h1>
 
           <div class="tel_header">
-           <img src="../../images/phone.png" alt="logo téléphone"/>
+            <img src="../../images/phone.png" alt="logo téléphone" />
             <p>05 62 22 88 08</p>
           </div>
           <div class="lang_header">
@@ -36,7 +36,7 @@
 
           <nav>
             <ul class="menu">
-             <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
+              <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
               <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
               <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
               <li><a class="lineUnderLink" href="../../pages/french/environment.html">Environnement</a></li>
@@ -64,7 +64,7 @@
 
       <div class="columns large-6 medium-6 small-12">
         <div class="mapHome">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2840.6870004125844!2d1.2477162150621108!3d44.60342689848439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ac9dcb381468d9%3A0x44a6c3f858018649!2sRestaurant+La+R%C3%A9cr%C3%A9ation!5e0!3m2!1sfr!2sfr!4v1495912774201" width="410.5" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe class="googleMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2840.6870004125844!2d1.2477162150621108!3d44.60342689848439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ac9dcb381468d9%3A0x44a6c3f858018649!2sRestaurant+La+R%C3%A9cr%C3%A9ation!5e0!3m2!1sfr!2sfr!4v1495912774201" width="90%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
