--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <h1><a href="index.html">La Récréation</a></h1>
 
           <div class="tel_header">
-           <img src="images/phone.png" alt="logo téléphone"/>
+            <img src="images/phone.png" alt="logo téléphone" />
             <p>05 62 22 88 08</p>
           </div>
           <div class="lang_header">
@@ -53,7 +53,12 @@
       <div class="columns large-6 medium-6 small-12">
         <div class="firstTextHome">
           <h2>L’heure de <font color="#CC76CA">La Récréation</font> a sonné !<br/><br/></h2>
-          <p>Un restaurant dépaysant, complétement atypique dans une ancienne école de l’entre-deux guerres. Salle de classes, cour de récréation avec préau transformé en jardin luxuriant, où l’on déjeune sous le marronnier ou les platanes mûriers.<br/><br/>Le soir venu l’éclairage met en relief les anciens murs de pierres de cette place idillyque et chargé d’histoire où les artistes viennent exposer. Une cuisine inventive dans l’esprit du site, riche de saveurs et de surprises venue des 4 coins du monde garantissant des légumes frais issu du potager qui jouxte le restaurant. Le restaurant organise régulièrement des cours de cuisine et développe un service de traiteur à domicile.<br/><br/><br/>Plus qu’un bon restaurant, c’est un voyage.</p>
+          <p>Un restaurant dépaysant, complétement atypique dans une ancienne école de l’entre-deux guerres. Salle de classes, cour de récréation avec préau transformé en jardin luxuriant, où l’on déjeune sous le marronnier ou les platanes mûriers.
+            <br/>
+            <br/>Le soir venu l’éclairage met en relief les anciens murs de pierres de cette place idillyque et chargé d’histoire où les artistes viennent exposer. Une cuisine inventive dans l’esprit du site, riche de saveurs et de surprises venue des 4 coins du monde garantissant des légumes frais issu du potager qui jouxte le restaurant. Le restaurant organise régulièrement des cours de cuisine et développe un service de traiteur à domicile.
+            <br/>
+            <br/>
+            <br/>Plus qu’un bon restaurant, c’est un voyage.</p>
         </div>
       </div>
 
@@ -73,7 +78,7 @@
       <div class="columns large-7 medium-7 small-12">
         <div class="videoHome">
           <video width="520" height="340" controls>
-          <source src="images/laRecreation.mp4" type="video/mp4" alt="Votre navigateur ne supporte pas la balise vidéo.">
+            <source src="images/laRecreation.mp4" type="video/mp4" alt="Votre navigateur ne supporte pas la balise vidéo.">
           </video>
         </div>
       </div>
@@ -81,7 +86,8 @@
       <div class="columns large-5 medium-5 small-12">
         <div class="secondTextHome">
           <p>
-            Le Restaurant se situe dans la commune des Arques, petit village situé au sud de la France dans le département du Lot région midi pyrénées. A 26 km de Cahors et 26 km de Gourdon.Au sud du périgord et au sud-est de la Dordogne Le village est classé pour l'église Saint Laurent les Fresques de Saint Andrée, l'ancien doyénée et sa tour.<br/>Les Arques sont également connus pour son musée consacré à Ossip Zadkine, les ateliers des Arques qui font venir chaque année une douzaine d'artistes venant de toute l'Europe, et bien sur le restaurant la Récréation. Que d'effervescence dans un si petit village de 217 Habitants.
+            Le Restaurant se situe dans la commune des Arques, petit village situé au sud de la France dans le département du Lot région midi pyrénées. A 26 km de Cahors et 26 km de Gourdon.Au sud du périgord et au sud-est de la Dordogne Le village est classé pour l'église Saint Laurent les Fresques de Saint Andrée, l'ancien doyénée et sa tour.
+            <br/>Les Arques sont également connus pour son musée consacré à Ossip Zadkine, les ateliers des Arques qui font venir chaque année une douzaine d'artistes venant de toute l'Europe, et bien sur le restaurant la Récréation. Que d'effervescence dans un si petit village de 217 Habitants.
           </p>
         </div>
       </div>
@@ -101,7 +107,7 @@
 
       <div class="columns large-6 medium-6 small-12">
         <div class="mapHome">
-          <iframe class="googleMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2840.6870004125844!2d1.2477162150621108!3d44.60342689848439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ac9dcb381468d9%3A0x44a6c3f858018649!2sRestaurant+La+R%C3%A9cr%C3%A9ation!5e0!3m2!1sfr!2sfr!4v1495912774201" width="410.5" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe class="googleMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2840.6870004125844!2d1.2477162150621108!3d44.60342689848439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ac9dcb381468d9%3A0x44a6c3f858018649!2sRestaurant+La+R%C3%A9cr%C3%A9ation!5e0!3m2!1sfr!2sfr!4v1495912774201" width="90%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
@@ -113,11 +119,11 @@
       <div class="footerCss">
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
-              <img src="images/tripavidsorIcon.jpg" alt="logo site">
-              <img src="images/fourchetteIcon.jpg" alt="logo site">
-              <img src="images/michelinIcon.jpg" alt="logo site">
-              <img src="images/bonneTableIcon.jpg" alt="logo site">
-              <img src="images/facebookIcon.jpg" alt="logo site">
+            <img src="images/tripavidsorIcon.jpg" alt="logo site">
+            <img src="images/fourchetteIcon.jpg" alt="logo site">
+            <img src="images/michelinIcon.jpg" alt="logo site">
+            <img src="images/bonneTableIcon.jpg" alt="logo site">
+            <img src="images/facebookIcon.jpg" alt="logo site">
           </div>
         </div>
         <div class="columns large-4 medium-4 small-4">
