--- a/pages/french/contactAndPartner.html
+++ b/pages/french/contactAndPartner.html
@@ -69,15 +69,10 @@
       </div>
     </div>
     <div class="row">
-      <div class="columns large-6 medium-6 small-12">
-        <div class="firstImageContact">
-          <img src="../../images/crevetteSesame.jpg" alt="image à définir">
-        </div>
-      </div>
-      <div class="columns large-6 medium-6 small-12">
-        <div class="secondImageContact">
-          <img src="../../images/englishFlag.png" alt="logos partenaires">
-          <p>NOS PARTENAIRES</p>
+      <div class="columns large-12 medium-12 small-12">
+        <div class="firstTextContact">
+          <h2>NOS PARTENAIRES</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat rerum quas quibusdam iusto libero non illum facere optio! Tempora repellat ratione eaque architecto vero maiores aliquid aliquam non sed cupiditate!</p>
         </div>
       </div>
     </div>
