Footer et header

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="columns large-12 medium-12 small-12">
 
           <nav>
-            <ul class="menu">
+            <ul>
               <li><a class="lineUnderLink" href="index.html">Accueil du site</a></li>
               <li><a class="lineUnderLink" href="pages/french/menuAndWine.html">Menus et carte des vins</a></li>
               <li><a class="lineUnderLink" href="pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
@@ -119,11 +119,13 @@
       <div class="footerCss">
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
-            <img src="images/tripavidsorIcon.jpg" alt="logo site">
-            <img src="images/fourchetteIcon.jpg" alt="logo site">
-            <img src="images/michelinIcon.jpg" alt="logo site">
-            <img src="images/bonneTableIcon.jpg" alt="logo site">
-            <img src="images/facebookIcon.jpg" alt="logo site">
+            <p>
+              <a href="#" title="Page Mentions légales"><img src="images/tripavidsorIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="images/fourchetteIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="images/michelinIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="images/bonneTableIcon.jpg" alt="logo site"></a>
+              <a href="#" title="Page Mentions légales"><img src="images/facebookIcon.jpg" alt="logo site"></a>
+            </p>
           </div>
         </div>
         <div class="columns large-4 medium-4 small-4">
@@ -133,10 +135,11 @@
         </div>
         <div class="columns large-4 medium-4 small-4">
           <div class="rightFooter">
-            <a class="lineUnderLink" href="../../pages/french/legalMentions.html" title="Page Mentions légales">MENTIONS LEGALES</a>
+            <a class="lineUnderLink" href="pages/french/legalMentions.html" title="Page Mentions légales">MENTIONS LEGALES</a>
           </div>
         </div>
       </div>
     </div>
   </footer>
+  <script type="text/javascript" src="scripts/main.js"></script>
 </body>
