--- a/pages/french/environment.html
+++ b/pages/french/environment.html
@@ -33,7 +33,7 @@
         <div class="columns large-12 medium-12 small-12">
 
           <nav>
-            <ul class="menu">
+            <ul>
               <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
               <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
               <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
@@ -94,7 +94,7 @@
         </div>
         <div class="columns large-5 medium-5 small-12">
           <div class="secondPictureEnvironment">
-            <img src="../../images/marais.jpg" alt="Le marais des Arques" />
+            <img class="pictureSwamp" src="../../images/marais.jpg" alt="Le marais des Arques" />
           </div>
         </div>
       </div>
@@ -103,7 +103,7 @@
   </section>
 
   <footer>
-    <!--<link rel="stylesheet" href="styles/foundation.min.css" />-->
+
     <div class="row">
       <div class="footerCss">
         <div class="columns large-4 medium-4 small-4">
@@ -130,4 +130,5 @@
       </div>
     </div>
   </footer>
+  <script type="text/javascript" src="../../scripts/main.js"></script>
 </body>
