--- a/pages/french/menuAndWine.html
+++ b/pages/french/menuAndWine.html
@@ -18,7 +18,7 @@
           <h1><a href="../../index.html">La Récréation</a></h1>
 
           <div class="tel_header">
-           <img src="../../images/phone.png" alt="logo téléphone"/>
+            <img src="../../images/phone.png" alt="logo téléphone" />
             <p>05 62 22 88 08</p>
           </div>
           <div class="lang_header">
@@ -33,7 +33,7 @@
         <div class="columns large-12 medium-12 small-12">
 
           <nav>
-            <ul class="menu">
+            <ul>
               <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
               <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
               <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
@@ -87,4 +87,5 @@
       </div>
     </div>
   </footer>
+  <script type="text/javascript" src="../../scripts/main.js"></script>
 </body>
