--- a/pages/french/legalMentions.html
+++ b/pages/french/legalMentions.html
@@ -33,7 +33,7 @@
         <div class="columns large-12 medium-12 small-12">
 
           <nav>
-            <ul class="menu">
+            <ul>
               <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
               <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
               <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
@@ -134,4 +134,5 @@
       </div>
     </div>
   </footer>
+  <script type="text/javascript" src="../../scripts/main.js"></script>
 </body>
