--- a/pages/french/menuAndWine.html
+++ b/pages/french/menuAndWine.html
@@ -49,11 +49,23 @@
   <section>
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
-        <div class="menusAndWine">
-          <img src="../../images/menu1.jpg" alt="menu du Petit Ecolier">
-          <img src="../../images/menu2.jpg" alt="Menu du Maître d'école">
-          <img src="../../images/menu3.jpg" alt="Menu la Récréation">
-          <img src="../../images/vine.jpg" alt="Carte des vins">
+        <div class="menusAndVine">
+          <div class="menu1">
+            <img src="../../images/crevette.png" alt="menu du Petit Ecolier">
+            <p class="textMenu1">Menu du Petit Ecolier</p>
+          </div>
+          <div class="menu2">
+          <img src="../../images/crevette.png" alt="Menu du Maître d'école">
+          <p class="textMenu2">Menu du Maître d'école</p>
+          </div>
+          <div class="menu3">
+          <img src="../../images/crevette.png" alt="Menu la Récréation">
+          <p class="textMenu3">Menu La Récréation</p>
+          </div>
+          <div class="menu4">
+          <img src="../../images/crevette.png" alt="Carte des vins">
+          <p class="textMenu4">Carte des vins</p>
+          </div>
         </div>
       </div>
     </div>
